// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsPaymentMethodListItem matches snapshot when showQuote with no matched quote amounts 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
    data-testid="ramps-payment-method-item-debit-credit-card"
    role="button"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Debit card
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-debit-credit-card"
          >
            5 - 10 mins
          </p>
        </div>
      </div>
      <div
        class="flex flex-row gap-2 items-center shrink-0"
      />
    </div>
  </button>
</div>
`;

exports[`RampsPaymentMethodListItem matches snapshot while quote is loading 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
    data-testid="ramps-payment-method-item-debit-credit-card"
    role="button"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Debit card
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-debit-credit-card"
          >
            5 - 10 mins
          </p>
        </div>
      </div>
      <div
        class="flex flex-row gap-2 items-center shrink-0"
      >
        <div
          class="flex flex-col gap-1 items-end"
          data-testid="ramps-quote-display-loading"
        >
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 16px; width: 80px;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 16px; width: 60px;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`RampsPaymentMethodListItem matches snapshot with delay and limits 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
    data-testid="ramps-payment-method-item-debit-credit-card"
    role="button"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Debit card
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-debit-credit-card"
          >
            5 - 10 mins • Up to $2,000
          </p>
        </div>
      </div>
      <div
        class="flex flex-row gap-2 items-center shrink-0"
      >
        <svg
          class="inline-block w-6 h-6 text-icon-default"
          data-testid="ramps-payment-method-item-selected"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`RampsPaymentMethodListItem matches snapshot with instant delay and no limits 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
    data-testid="ramps-payment-method-item-bank-transfer"
    role="button"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.25 9.75H4.5v6H3a.75.75 0 0 0 0 1.5h18a.75.75 0 0 0 0-1.5h-1.5v-6h2.25a.75.75 0 0 0 .393-1.388l-9.75-6a.75.75 0 0 0-.786 0l-9.75 6A.75.75 0 0 0 2.25 9.75m3.75 0h3v6H6Zm7.5 0v6h-3v-6Zm4.5 6h-3v-6h3ZM12 3.88l7.1 4.37H4.9ZM23.25 19.5a.75.75 0 0 1-.75.75h-21a.75.75 0 0 1 0-1.5h21a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Bank transfer
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-bank-transfer"
          >
            Instant
          </p>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`RampsPaymentMethodListItem matches snapshot with quote amounts 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
    data-testid="ramps-payment-method-item-debit-credit-card"
    role="button"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Debit card
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-debit-credit-card"
          >
            5 - 10 mins
          </p>
        </div>
      </div>
      <div
        class="flex flex-row gap-2 items-center shrink-0"
      >
        <div
          class="flex flex-col items-end"
          data-testid="ramps-quote-display"
        >
          <p
            class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            0.106 ETH
          </p>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          >
            $499.97
          </p>
        </div>
        <svg
          class="inline-block w-6 h-6 text-icon-default"
          data-testid="ramps-payment-method-item-selected"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`RampsPaymentMethodListItem matches snapshot with quote error 1`] = `
<div>
  <button
    aria-disabled="true"
    class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative cursor-not-allowed opacity-50 w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
    data-testid="ramps-payment-method-item-debit-credit-card"
    disabled=""
    role="button"
    tabindex="-1"
  >
    <div
      class="flex flex-row gap-3 items-center justify-between w-full"
    >
      <div
        class="flex flex-row gap-3 items-center min-w-0 flex-1"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
        >
          <svg
            class="inline-block w-6 h-6 text-icon-alternative"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start min-w-0 flex-1"
        >
          <div
            class="flex flex-row gap-2 items-center w-full min-w-0"
          >
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
            >
              Debit card
            </p>
          </div>
          <p
            class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
            data-testid="ramps-payment-method-item-delay-debit-credit-card"
          >
            Minimum purchase is $25.00
          </p>
        </div>
      </div>
      <div
        class="flex flex-row gap-2 items-center shrink-0"
      >
        <div
          class="flex flex-col items-end justify-center"
          data-testid="ramps-quote-display-warning"
        >
          <svg
            class="inline-block w-4 h-4 text-warning-default"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m-.75-7.5V7.5a.75.75 0 0 1 1.5 0v5.25a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15a1.125 1.125 0 0 1 1.125 1.125"
            />
          </svg>
        </div>
      </div>
    </div>
  </button>
</div>
`;
